--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
-</LinearLayout>
+
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@android:id/tabhost" android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	<LinearLayout android:id="@+id/linearLayout1"
+		android:layout_width="match_parent" android:layout_height="wrap_content"
+		android:layout_weight="0">
+		<RelativeLayout android:layout_height="wrap_content"
+			android:id="@+id/relativeLayout1" android:layout_width="fill_parent">
+
+			<Button android:layout_width="wrap_content"
+
+				android:layout_height="wrap_content" android:id="@+id/goAddCreaiton"
+				android:layout_alignParentRight="true"></Button>
+		</RelativeLayout>
+		<TextView android:text="@string/hello" android:layout_width="fill_parent"
+			android:layout_height="wrap_content"></TextView>
+		<FrameLayout android:id="@android:id/tabcontent"
+			android:layout_width="fill_parent" android:layout_height="fill_parent"
+
+			android:layout_weight="1" />
+		<TabWidget android:id="@android:id/tabs"
+			android:layout_width="fill_parent" android:layout_height="wrap_content"
+			android:layout_weight="0" />
+	</LinearLayout>
+</TabHost>
