--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -8,11 +8,7 @@
 	<TableLayout android:layout_height="fill_parent"
 		android:layout_width="wrap_content" android:id="@+id/tableLayout1">
 		
-		<TextView android:layout_width="wrap_content"
-			android:id="@+id/title" android:layout_height="wrap_content" android:text="text"></TextView>
-		
-		<TextView android:text="" android:id="@+id/date"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+		<TextView android:text="" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/name"></TextView>
 	</TableLayout>
 
 </LinearLayout>
