--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -4,6 +4,6 @@
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
-    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="HomePage"></TextView>
+    <ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/checkinListView"></ListView>
     
 </LinearLayout>
