--- a/res/layout/act.xml
+++ b/res/layout/act.xml
@@ -1,17 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
-    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_weight="5">
-        <TextView android:text="TextView" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
-        <Button android:text="Button" android:id="@+id/button1" android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
-    </LinearLayout>
-    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_weight="5">
-        <TextView android:text="TextView" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-        <Button android:text="Button" android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-    </LinearLayout>
-    <Button android:layout_weight="1" android:text="Button" android:id="@+id/button2" android:layout_height="wrap_content" android:layout_width="fill_parent"></Button>
-    
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical" android:layout_width="match_parent"
+	android:layout_height="match_parent">
+	<ScrollView android:layout_width="match_parent"
+		android:layout_height="wrap_content" android:id="@+id/scrollView1"
+		android:layout_weight="25">
+		<LinearLayout android:id="@+id/linearLayout1"
+			android:layout_width="match_parent" android:layout_height="match_parent"
+			android:orientation="vertical">
+			<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:orientation="vertical">
+				<TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="TextView"></TextView>
+				<LinearLayout android:layout_width="wrap_content" android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:orientation="horizontal">
+					<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button1" android:text="Button"></Button>
+					<HorizontalScrollView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/horizontalScrollView1">
+						<LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout4" android:layout_height="match_parent" android:layout_width="match_parent">
+							<TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="TextView" android:textSize="36px"></TextView>
+						</LinearLayout>
+					</HorizontalScrollView>
+				</LinearLayout>
+			</LinearLayout>
+			<View android:layout_width="fill_parent" android:layout_height="1px"
+				android:background="?android:attr/listDivider" />
+			<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout5" android:orientation="vertical">
+				<TextView android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_height="wrap_content" android:text="TextView"></TextView>
+				<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout6">
+					<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button3" android:text="Button"></Button>
+					<HorizontalScrollView android:id="@+id/horizontalScrollView2" android:layout_width="wrap_content" android:layout_height="wrap_content">
+						<LinearLayout android:id="@+id/linearLayout7" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal">
+							<TextView android:layout_width="wrap_content" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="TextView" android:textSize="36px"></TextView>
+						</LinearLayout>
+					</HorizontalScrollView>
+				</LinearLayout>
+			</LinearLayout>
+		</LinearLayout>
+	</ScrollView>
+	<Button android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/button2"
+		android:layout_weight="1" android:text="Button"></Button>
+
 </LinearLayout>
