--- a/res/drawable-hdpi/tabprof.xml
+++ b/res/drawable-hdpi/tabprof.xml
@@ -5,7 +5,7 @@
 		android:state_pressed="false" android:drawable="@drawable/profile_icon_w" />
 	<!--  Inactive tab -->
 	<item android:state_selected="false" android:state_focused="false"
-		android:state_pressed="false" android:drawable="@drawable/user_icon_b"  />
+		android:state_pressed="false" android:drawable="@drawable/profile_icon_b"  />
 	<!--  Pressed tab -->
 
 </selector>
