--- a/res/layout/act.xml
+++ b/res/layout/act.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="match_parent"
-	android:layout_height="match_parent">
+<LinearLayout android:orientation="vertical" android:layout_width="match_parent"
+	android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
 	<ScrollView android:layout_width="match_parent"
 		android:layout_height="wrap_content" android:id="@+id/scrollView1"
 		android:layout_weight="25">
@@ -26,7 +25,7 @@
 			<TextView android:layout_width="wrap_content" android:id="@+id/textView3"
 				android:layout_height="wrap_content" android:text="選擇活動" />
 			<Spinner android:layout_width="match_parent"
-				android:layout_height="wrap_content" android:id="@+id/spinner1" />
+				android:layout_height="wrap_content" android:id="@+id/spinner1"/>
 		</LinearLayout>
 	</ScrollView>
 	<Button android:layout_width="fill_parent"
