--- a/res/layout/checkin_listitem.xml
+++ b/res/layout/checkin_listitem.xml
@@ -3,7 +3,7 @@
     android:id="@+id/LinearLayout1"   
     xmlns:android="http://schemas.android.com/apk/res/android"   
     android:layout_height="wrap_content" android:layout_width="match_parent">
-    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" android:id="@+id/checkinUserImage" android:layout_margin="10dip"></ImageView>
+    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/no_photo" android:id="@+id/checkinUserImage" android:layout_margin="10dip"></ImageView>
     <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_width="match_parent">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3">
             <TextView android:layout_marginTop="5dip" android:id="@+id/checkinName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20dip" android:text="Name"></TextView>
