Profile page's list can click

--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -2,13 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="horizontal" android:layout_width="wrap_content"
 	android:layout_height="wrap_content">
-	<ImageView android:src="@drawable/icon"
-		android:layout_height="wrap_content" android:id="@+id/item_view_item_img"
-		android:layout_width="wrap_content" android:paddingRight="5dp"></ImageView>
 	<TableLayout android:layout_height="fill_parent"
 		android:layout_width="wrap_content" android:id="@+id/tableLayout1">
-		
-		<TextView android:text="" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/name"></TextView>
+		<TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView"></TextView>
+		<TextView android:text="TextView" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+		<TextView android:text="TextView" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	</TableLayout>
 
 </LinearLayout>
