--- a/res/drawable-hdpi/tabact.xml
+++ b/res/drawable-hdpi/tabact.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--  Active tab -->
-	<item android:state_selected="true" android:state_focused="false"
-		android:state_pressed="false" android:drawable="@drawable/create_icon_w" />
-	<!--  Inactive tab -->
-	<item android:state_selected="false" android:state_focused="false"
-		android:state_pressed="false" android:drawable="@drawable/create_icon_b"  />
-	<!--  Pressed tab -->
-
+ <item android:drawable="@drawable/create_selected"
+  android:state_selected="true" />
+ <item android:drawable="@drawable/create_normal" />
 </selector>
