--- a/res/layout/act.xml
+++ b/res/layout/act.xml
@@ -7,28 +7,22 @@
 		<LinearLayout android:id="@+id/linearLayout1"
 			android:layout_width="match_parent" android:layout_height="match_parent"
 			android:orientation="vertical">
-			<TextView android:layout_width="match_parent" android:id="@+id/textView1"
-				android:gravity="center" android:text="建立活動" android:layout_height="match_parent" />
-			<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:text="加入朋友" />
-			<HorizontalScrollView android:layout_width="match_parent"
-				android:id="@+id/horizontalScrollView1" android:layout_height="wrap_content">
-				<LinearLayout android:id="@+id/linearLayout2"
-					android:layout_width="match_parent" android:layout_height="match_parent"
-					android:orientation="horizontal">
-					<Button android:id="@+id/recommendButton" android:layout_width="wrap_content"
-						android:layout_height="wrap_content" android:text="推薦" />
-					<LinearLayout android:layout_width="wrap_content"
-						android:id="@+id/linearLayout3" android:layout_height="match_parent" />
+			<TextView android:layout_width="wrap_content" android:id="@+id/textView3"
+				android:layout_height="wrap_content" android:text="選擇活動標籤" android:textSize="20dip" android:layout_margin="5dip"/>
+			<Spinner android:layout_width="match_parent"
+				android:layout_height="wrap_content" android:id="@+id/spinnerActivityTag" android:layout_margin="5dip"/>
+			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextView01" android:text="選擇活動狀態" android:textSize="20dip" android:layout_margin="5dip"></TextView>
+			<Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/spinnerActivityStatus" android:layout_margin="5dip"></Spinner>
+			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView2" android:text="選擇要加入的朋友" android:textSize="20dip" android:layout_margin="5dip"></TextView>
+			<HorizontalScrollView android:id="@+id/horizontalScrollView1" android:layout_width="match_parent" android:layout_height="wrap_content">
+				<LinearLayout android:id="@+id/linearLayout2" android:layout_height="match_parent" android:orientation="horizontal" android:layout_width="match_parent">
+					<Button android:layout_width="wrap_content" android:id="@+id/recommendButton" android:layout_height="wrap_content" android:text="推薦" android:layout_margin="5dip"></Button>
+					<LinearLayout android:id="@+id/linearLayout3" android:layout_width="wrap_content" android:layout_height="match_parent"></LinearLayout>
 				</LinearLayout>
 			</HorizontalScrollView>
-			<TextView android:layout_width="wrap_content" android:id="@+id/textView3"
-				android:layout_height="wrap_content" android:text="選擇活動" />
-			<Spinner android:layout_width="match_parent"
-				android:layout_height="wrap_content" android:id="@+id/spinner1"/>
 		</LinearLayout>
 	</ScrollView>
 	<Button android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:id="@+id/button2"
-		android:layout_weight="1" android:text="Button" />
+		android:layout_weight="1" android:text="建立"/>
 </LinearLayout>
