--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,10 +7,10 @@
 		android:id="@+id/addcreation_linearLayout">
 
 		<FrameLayout android:id="@android:id/tabcontent"
-			android:layout_width="fill_parent" android:layout_height="fill_parent"
-
+			android:layout_width="fill_parent" android:layout_height="0dip"
 			android:layout_weight="1" />
 		<TabWidget android:id="@android:id/tabs"
-			android:layout_width="fill_parent" android:layout_weight="0" android:layout_height="72px"/>
+			android:layout_width="fill_parent" android:layout_height="60dip"
+			android:layout_weight="0" />
 	</LinearLayout>
 </TabHost>
