--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal" android:layout_width="wrap_content"
-	android:layout_height="wrap_content">
-	<TableLayout android:layout_height="fill_parent"
-		android:layout_width="wrap_content" android:id="@+id/tableLayout1">
-		<TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView"></TextView>
-		<TextView android:text="TextView" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-		<TextView android:text="TextView" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	</TableLayout>
+	android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent">
+    <LinearLayout android:layout_height="match_parent" android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_width="match_parent" android:layout_margin="5dip">
+        <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content"></TextView>
+        <TextView android:id="@+id/textView2" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content"></TextView>
+        <TextView android:id="@+id/textView3" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content"></TextView>
+    </LinearLayout>
 
 </LinearLayout>
