--- a/res/layout/profile.xml
+++ b/res/layout/profile.xml
@@ -5,19 +5,16 @@
 	<LinearLayout android:layout_width="match_parent"
 		android:layout_height="wrap_content" android:id="@+id/linearLayout1">
 		<ImageView android:src="@drawable/no_photo" android:id="@+id/imageView1"
-			android:layout_height="100dp" android:layout_width="100dp"></ImageView>
+			android:layout_height="100dp" android:layout_width="100dp" android:layout_margin="5dip"></ImageView>
 		<LinearLayout android:id="@+id/linearLayout2"
 			android:orientation="vertical" android:layout_height="wrap_content"
-			android:layout_width="match_parent">
+			android:layout_width="match_parent" android:layout_marginTop="5dip">
 			<TextView android:text="TextView" android:id="@+id/textView1"
-				android:layout_width="wrap_content" android:layout_height="wrap_content"
-				android:textSize="36px"></TextView>
+				android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24dip"></TextView>
 			<TextView android:layout_width="wrap_content" android:id="@+id/textView2"
-				android:layout_height="wrap_content" android:text="TextView"
-				android:textSize="36px"></TextView>
+				android:layout_height="wrap_content" android:text="TextView" android:textSize="20dip"></TextView>
 			<TextView android:text="TextView" android:id="@+id/textView3"
-				android:layout_width="wrap_content" android:layout_height="wrap_content"
-				android:textSize="36px"></TextView>
+				android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20dip"></TextView>
 		</LinearLayout>
 	</LinearLayout>
 	<ListView android:layout_height="wrap_content" android:id="@+id/listView1"
