--- a/res/layout/act.xml
+++ b/res/layout/act.xml
@@ -24,7 +24,7 @@
 			<Spinner android:layout_width="match_parent"
 				android:layout_height="wrap_content" android:id="@+id/spinnerActivityStatus" android:layout_marginLeft="5dip" android:layout_marginRight="5dip"></Spinner>
 			<TextView android:layout_width="wrap_content" android:text="選擇要加入的朋友" android:layout_marginLeft="5dip" android:layout_height="wrap_content" android:textSize="20dip" android:id="@+id/TextView02"></TextView>
-			<Button android:layout_height="wrap_content" android:id="@+id/recommendButton" android:layout_width="fill_parent" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:text="已加入的清單"></Button>
+			<Button android:layout_height="wrap_content" android:id="@+id/recommendButton" android:layout_width="fill_parent" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:text="加入朋友"></Button>
 			<TextView android:layout_width="wrap_content" android:layout_marginLeft="5dip" android:layout_height="wrap_content" android:textSize="20dip" android:id="@+id/textView2" android:text="請輸入一些描述"></TextView>
 			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:id="@+id/descriptionText">
 				<requestFocus></requestFocus>
